# UXP-Linda-Potoki

./: .gitignore  BoostTestHelpers.cmake  CMakeLists.txt  Logger.cpp  Pipe.cpp  README.md
server/: QLManualTest.cpp  Server.cpp  Server.h  queryList.cpp  queryList.h
src/: LindaCommunication.cpp  LindaCommunication.h  Logger.h  Pipe.cpp  Pipe.h  data.cpp  data.hpp  dataElement.cpp  dataElement.hpp  dataGenerator.cpp  dataGenerator.h  dataGenerator.hpp  dataPattern.cpp  dataPattern.hpp  dataPatternElement.cpp  dataPatternElement.hpp  main.cpp  request.cpp  request.hpp  response.cpp  response.hpp
src/client/: client.cpp  client.h
src/server/: Server.cpp  Server.h  queryList.cpp  queryList.h
test/: dataElement_test.cpp  dataGenerator_test.cpp  dataPatternElement_test.cpp  dataPattern_test.cpp  data_test.cpp  request_test.cpp  response_test.cpp
